kubernetes/namespaces/airflow/base/np-allow-kafka-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-kafka-egress
  namespace: airflow
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: reviews-analytics
    owner: data-platform
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kafka
          podSelector:
            matchLabels:
              strimzi.io/name: kafka-cluster-kafka
      ports:
        - protocol: TCP
          port: 9092
