kubernetes/namespaces/airflow/base/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
  labels:
    app.kubernetes.io/part-of: reviews-analytics
    app.kubernetes.io/managed-by: kustomize
    owner: data-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  labels:
    app.kubernetes.io/part-of: reviews-analytics
    app.kubernetes.io/managed-by: kustomize
    owner: data-platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
